parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASSERT
    BREAK
    CCOMMENT
    COMMA
    ELSE
    FOR
    IF
    LBRACES
    LBRACKET
    NUMBER
    PRINT
    QUESTION
    RBRACES
    RBRACKET
    READ
    RETURN
    SEMI
    UCCCOMMENT
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> global_declaration_list
Rule 2     global_declaration_list -> global_declaration
Rule 3     global_declaration_list -> global_declaration_list global_declaration
Rule 4     global_declaration -> postfix_expression
Rule 5     global_declaration -> type_specifier
Rule 6     global_declaration -> assignment_operator
Rule 7     global_declaration -> cast_expression
Rule 8     global_declaration -> unary_expression
Rule 9     global_declaration -> binary_expression
Rule 10    global_declaration -> constant_expression
Rule 11    postfix_expression -> primary_expression
Rule 12    postfix_expression -> postfix_expression PLUS_PLUS
Rule 13    postfix_expression -> postfix_expression MINUS_MINUS
Rule 14    primary_expression -> identifier
Rule 15    primary_expression -> constant
Rule 16    cast_expression -> postfix_expression
Rule 17    cast_expression -> LPAREN type_specifier RPAREN cast_expression
Rule 18    unary_expression -> postfix_expression
Rule 19    unary_expression -> PLUS_PLUS unary_expression
Rule 20    unary_expression -> MINUS_MINUS unary_expression
Rule 21    unary_expression -> unary_operator cast_expression
Rule 22    binary_expression -> cast_expression
Rule 23    binary_expression -> binary_expression TIMES binary_expression
Rule 24    binary_expression -> binary_expression DIVIDE binary_expression
Rule 25    binary_expression -> binary_expression MOD binary_expression
Rule 26    binary_expression -> binary_expression PLUS binary_expression
Rule 27    binary_expression -> binary_expression MINUS binary_expression
Rule 28    binary_expression -> binary_expression SMALLER binary_expression
Rule 29    binary_expression -> binary_expression SMALLER_EQUAL binary_expression
Rule 30    binary_expression -> binary_expression BIGGER binary_expression
Rule 31    binary_expression -> binary_expression BIGGER_EQUAL binary_expression
Rule 32    binary_expression -> binary_expression EQUAL binary_expression
Rule 33    binary_expression -> binary_expression DIFFERENT binary_expression
Rule 34    binary_expression -> binary_expression AND binary_expression
Rule 35    binary_expression -> binary_expression OR binary_expression
Rule 36    constant_expression -> binary_expression
Rule 37    identifier -> ID
Rule 38    unary_operator -> UPPERSAND
Rule 39    unary_operator -> TIMES
Rule 40    unary_operator -> PLUS
Rule 41    unary_operator -> MINUS
Rule 42    unary_operator -> NOT
Rule 43    type_specifier -> VOID
Rule 44    type_specifier -> CHAR
Rule 45    type_specifier -> INT
Rule 46    type_specifier -> FLOAT
Rule 47    assignment_operator -> ASSIGN
Rule 48    assignment_operator -> ASSIGN_TIMES
Rule 49    assignment_operator -> ASSIGN_DIVIDE
Rule 50    assignment_operator -> ASSIGN_REMAINDER
Rule 51    assignment_operator -> ASSIGN_PLUS
Rule 52    assignment_operator -> ASSIGN_MINUS
Rule 53    constant -> INT_CONST
Rule 54    constant -> FLOAT_CONST
Rule 55    constant -> STRING_CONST

Terminals, with rules where they appear

AND                  : 34
ASSERT               : 
ASSIGN               : 47
ASSIGN_DIVIDE        : 49
ASSIGN_MINUS         : 52
ASSIGN_PLUS          : 51
ASSIGN_REMAINDER     : 50
ASSIGN_TIMES         : 48
BIGGER               : 30
BIGGER_EQUAL         : 31
BREAK                : 
CCOMMENT             : 
CHAR                 : 44
COMMA                : 
DIFFERENT            : 33
DIVIDE               : 24
ELSE                 : 
EQUAL                : 32
FLOAT                : 46
FLOAT_CONST          : 54
FOR                  : 
ID                   : 37
IF                   : 
INT                  : 45
INT_CONST            : 53
LBRACES              : 
LBRACKET             : 
LPAREN               : 17
MINUS                : 27 41
MINUS_MINUS          : 13 20
MOD                  : 25
NOT                  : 42
NUMBER               : 
OR                   : 35
PLUS                 : 26 40
PLUS_PLUS            : 12 19
PRINT                : 
QUESTION             : 
RBRACES              : 
RBRACKET             : 
READ                 : 
RETURN               : 
RPAREN               : 17
SEMI                 : 
SMALLER              : 28
SMALLER_EQUAL        : 29
STRING_CONST         : 55
TIMES                : 23 39
UCCCOMMENT           : 
UPPERSAND            : 38
VOID                 : 43
WHILE                : 
error                : 

Nonterminals, with rules where they appear

assignment_operator  : 6
binary_expression    : 9 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36
cast_expression      : 7 17 21 22
constant             : 15
constant_expression  : 10
global_declaration   : 2 3
global_declaration_list : 1 3
identifier           : 14
postfix_expression   : 4 12 13 16 18
primary_expression   : 11
program              : 0
type_specifier       : 5 17
unary_expression     : 8 19 20
unary_operator       : 21

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_declaration_list
    (2) global_declaration_list -> . global_declaration
    (3) global_declaration_list -> . global_declaration_list global_declaration
    (4) global_declaration -> . postfix_expression
    (5) global_declaration -> . type_specifier
    (6) global_declaration -> . assignment_operator
    (7) global_declaration -> . cast_expression
    (8) global_declaration -> . unary_expression
    (9) global_declaration -> . binary_expression
    (10) global_declaration -> . constant_expression
    (11) postfix_expression -> . primary_expression
    (12) postfix_expression -> . postfix_expression PLUS_PLUS
    (13) postfix_expression -> . postfix_expression MINUS_MINUS
    (43) type_specifier -> . VOID
    (44) type_specifier -> . CHAR
    (45) type_specifier -> . INT
    (46) type_specifier -> . FLOAT
    (47) assignment_operator -> . ASSIGN
    (48) assignment_operator -> . ASSIGN_TIMES
    (49) assignment_operator -> . ASSIGN_DIVIDE
    (50) assignment_operator -> . ASSIGN_REMAINDER
    (51) assignment_operator -> . ASSIGN_PLUS
    (52) assignment_operator -> . ASSIGN_MINUS
    (16) cast_expression -> . postfix_expression
    (17) cast_expression -> . LPAREN type_specifier RPAREN cast_expression
    (18) unary_expression -> . postfix_expression
    (19) unary_expression -> . PLUS_PLUS unary_expression
    (20) unary_expression -> . MINUS_MINUS unary_expression
    (21) unary_expression -> . unary_operator cast_expression
    (22) binary_expression -> . cast_expression
    (23) binary_expression -> . binary_expression TIMES binary_expression
    (24) binary_expression -> . binary_expression DIVIDE binary_expression
    (25) binary_expression -> . binary_expression MOD binary_expression
    (26) binary_expression -> . binary_expression PLUS binary_expression
    (27) binary_expression -> . binary_expression MINUS binary_expression
    (28) binary_expression -> . binary_expression SMALLER binary_expression
    (29) binary_expression -> . binary_expression SMALLER_EQUAL binary_expression
    (30) binary_expression -> . binary_expression BIGGER binary_expression
    (31) binary_expression -> . binary_expression BIGGER_EQUAL binary_expression
    (32) binary_expression -> . binary_expression EQUAL binary_expression
    (33) binary_expression -> . binary_expression DIFFERENT binary_expression
    (34) binary_expression -> . binary_expression AND binary_expression
    (35) binary_expression -> . binary_expression OR binary_expression
    (36) constant_expression -> . binary_expression
    (14) primary_expression -> . identifier
    (15) primary_expression -> . constant
    (38) unary_operator -> . UPPERSAND
    (39) unary_operator -> . TIMES
    (40) unary_operator -> . PLUS
    (41) unary_operator -> . MINUS
    (42) unary_operator -> . NOT
    (37) identifier -> . ID
    (53) constant -> . INT_CONST
    (54) constant -> . FLOAT_CONST
    (55) constant -> . STRING_CONST

    VOID            shift and go to state 14
    CHAR            shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    ASSIGN          shift and go to state 18
    ASSIGN_TIMES    shift and go to state 19
    ASSIGN_DIVIDE   shift and go to state 20
    ASSIGN_REMAINDER shift and go to state 21
    ASSIGN_PLUS     shift and go to state 22
    ASSIGN_MINUS    shift and go to state 23
    LPAREN          shift and go to state 24
    PLUS_PLUS       shift and go to state 12
    MINUS_MINUS     shift and go to state 13
    UPPERSAND       shift and go to state 31
    TIMES           shift and go to state 26
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    NOT             shift and go to state 32
    ID              shift and go to state 33
    INT_CONST       shift and go to state 34
    FLOAT_CONST     shift and go to state 35
    STRING_CONST    shift and go to state 36

    program                        shift and go to state 1
    global_declaration_list        shift and go to state 2
    global_declaration             shift and go to state 3
    postfix_expression             shift and go to state 4
    type_specifier                 shift and go to state 5
    assignment_operator            shift and go to state 6
    cast_expression                shift and go to state 7
    unary_expression               shift and go to state 8
    binary_expression              shift and go to state 9
    constant_expression            shift and go to state 10
    primary_expression             shift and go to state 11
    unary_operator                 shift and go to state 25
    identifier                     shift and go to state 29
    constant                       shift and go to state 30

state 1

    (0) S' -> program .



state 2

    (1) program -> global_declaration_list .
    (3) global_declaration_list -> global_declaration_list . global_declaration
    (4) global_declaration -> . postfix_expression
    (5) global_declaration -> . type_specifier
    (6) global_declaration -> . assignment_operator
    (7) global_declaration -> . cast_expression
    (8) global_declaration -> . unary_expression
    (9) global_declaration -> . binary_expression
    (10) global_declaration -> . constant_expression
    (11) postfix_expression -> . primary_expression
    (12) postfix_expression -> . postfix_expression PLUS_PLUS
    (13) postfix_expression -> . postfix_expression MINUS_MINUS
    (43) type_specifier -> . VOID
    (44) type_specifier -> . CHAR
    (45) type_specifier -> . INT
    (46) type_specifier -> . FLOAT
    (47) assignment_operator -> . ASSIGN
    (48) assignment_operator -> . ASSIGN_TIMES
    (49) assignment_operator -> . ASSIGN_DIVIDE
    (50) assignment_operator -> . ASSIGN_REMAINDER
    (51) assignment_operator -> . ASSIGN_PLUS
    (52) assignment_operator -> . ASSIGN_MINUS
    (16) cast_expression -> . postfix_expression
    (17) cast_expression -> . LPAREN type_specifier RPAREN cast_expression
    (18) unary_expression -> . postfix_expression
    (19) unary_expression -> . PLUS_PLUS unary_expression
    (20) unary_expression -> . MINUS_MINUS unary_expression
    (21) unary_expression -> . unary_operator cast_expression
    (22) binary_expression -> . cast_expression
    (23) binary_expression -> . binary_expression TIMES binary_expression
    (24) binary_expression -> . binary_expression DIVIDE binary_expression
    (25) binary_expression -> . binary_expression MOD binary_expression
    (26) binary_expression -> . binary_expression PLUS binary_expression
    (27) binary_expression -> . binary_expression MINUS binary_expression
    (28) binary_expression -> . binary_expression SMALLER binary_expression
    (29) binary_expression -> . binary_expression SMALLER_EQUAL binary_expression
    (30) binary_expression -> . binary_expression BIGGER binary_expression
    (31) binary_expression -> . binary_expression BIGGER_EQUAL binary_expression
    (32) binary_expression -> . binary_expression EQUAL binary_expression
    (33) binary_expression -> . binary_expression DIFFERENT binary_expression
    (34) binary_expression -> . binary_expression AND binary_expression
    (35) binary_expression -> . binary_expression OR binary_expression
    (36) constant_expression -> . binary_expression
    (14) primary_expression -> . identifier
    (15) primary_expression -> . constant
    (38) unary_operator -> . UPPERSAND
    (39) unary_operator -> . TIMES
    (40) unary_operator -> . PLUS
    (41) unary_operator -> . MINUS
    (42) unary_operator -> . NOT
    (37) identifier -> . ID
    (53) constant -> . INT_CONST
    (54) constant -> . FLOAT_CONST
    (55) constant -> . STRING_CONST

    $end            reduce using rule 1 (program -> global_declaration_list .)
    VOID            shift and go to state 14
    CHAR            shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    ASSIGN          shift and go to state 18
    ASSIGN_TIMES    shift and go to state 19
    ASSIGN_DIVIDE   shift and go to state 20
    ASSIGN_REMAINDER shift and go to state 21
    ASSIGN_PLUS     shift and go to state 22
    ASSIGN_MINUS    shift and go to state 23
    LPAREN          shift and go to state 24
    PLUS_PLUS       shift and go to state 12
    MINUS_MINUS     shift and go to state 13
    UPPERSAND       shift and go to state 31
    TIMES           shift and go to state 26
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    NOT             shift and go to state 32
    ID              shift and go to state 33
    INT_CONST       shift and go to state 34
    FLOAT_CONST     shift and go to state 35
    STRING_CONST    shift and go to state 36

    global_declaration             shift and go to state 37
    postfix_expression             shift and go to state 4
    type_specifier                 shift and go to state 5
    assignment_operator            shift and go to state 6
    cast_expression                shift and go to state 7
    unary_expression               shift and go to state 8
    binary_expression              shift and go to state 9
    constant_expression            shift and go to state 10
    primary_expression             shift and go to state 11
    unary_operator                 shift and go to state 25
    identifier                     shift and go to state 29
    constant                       shift and go to state 30

state 3

    (2) global_declaration_list -> global_declaration .

    VOID            reduce using rule 2 (global_declaration_list -> global_declaration .)
    CHAR            reduce using rule 2 (global_declaration_list -> global_declaration .)
    INT             reduce using rule 2 (global_declaration_list -> global_declaration .)
    FLOAT           reduce using rule 2 (global_declaration_list -> global_declaration .)
    ASSIGN          reduce using rule 2 (global_declaration_list -> global_declaration .)
    ASSIGN_TIMES    reduce using rule 2 (global_declaration_list -> global_declaration .)
    ASSIGN_DIVIDE   reduce using rule 2 (global_declaration_list -> global_declaration .)
    ASSIGN_REMAINDER reduce using rule 2 (global_declaration_list -> global_declaration .)
    ASSIGN_PLUS     reduce using rule 2 (global_declaration_list -> global_declaration .)
    ASSIGN_MINUS    reduce using rule 2 (global_declaration_list -> global_declaration .)
    LPAREN          reduce using rule 2 (global_declaration_list -> global_declaration .)
    PLUS_PLUS       reduce using rule 2 (global_declaration_list -> global_declaration .)
    MINUS_MINUS     reduce using rule 2 (global_declaration_list -> global_declaration .)
    UPPERSAND       reduce using rule 2 (global_declaration_list -> global_declaration .)
    TIMES           reduce using rule 2 (global_declaration_list -> global_declaration .)
    PLUS            reduce using rule 2 (global_declaration_list -> global_declaration .)
    MINUS           reduce using rule 2 (global_declaration_list -> global_declaration .)
    NOT             reduce using rule 2 (global_declaration_list -> global_declaration .)
    ID              reduce using rule 2 (global_declaration_list -> global_declaration .)
    INT_CONST       reduce using rule 2 (global_declaration_list -> global_declaration .)
    FLOAT_CONST     reduce using rule 2 (global_declaration_list -> global_declaration .)
    STRING_CONST    reduce using rule 2 (global_declaration_list -> global_declaration .)
    $end            reduce using rule 2 (global_declaration_list -> global_declaration .)


state 4

    (4) global_declaration -> postfix_expression .
    (12) postfix_expression -> postfix_expression . PLUS_PLUS
    (13) postfix_expression -> postfix_expression . MINUS_MINUS
    (16) cast_expression -> postfix_expression .
    (18) unary_expression -> postfix_expression .

  ! shift/reduce conflict for PLUS_PLUS resolved as shift
  ! shift/reduce conflict for MINUS_MINUS resolved as shift
  ! reduce/reduce conflict for VOID resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for CHAR resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for INT resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for FLOAT resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ASSIGN resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ASSIGN_TIMES resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ASSIGN_DIVIDE resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ASSIGN_REMAINDER resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ASSIGN_PLUS resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ASSIGN_MINUS resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for LPAREN resolved using rule 4 (global_declaration -> postfix_expression .)
  ! shift/reduce conflict for PLUS_PLUS resolved as shift
  ! shift/reduce conflict for MINUS_MINUS resolved as shift
  ! reduce/reduce conflict for UPPERSAND resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for TIMES resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for PLUS resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for MINUS resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for NOT resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ID resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for INT_CONST resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for FLOAT_CONST resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for STRING_CONST resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for $end resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for VOID resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for CHAR resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for INT resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for FLOAT resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ASSIGN resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ASSIGN_TIMES resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ASSIGN_DIVIDE resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ASSIGN_REMAINDER resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ASSIGN_PLUS resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ASSIGN_MINUS resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for LPAREN resolved using rule 4 (global_declaration -> postfix_expression .)
  ! shift/reduce conflict for PLUS_PLUS resolved as shift
  ! shift/reduce conflict for MINUS_MINUS resolved as shift
  ! reduce/reduce conflict for UPPERSAND resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for TIMES resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for PLUS resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for MINUS resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for NOT resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for ID resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for INT_CONST resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for FLOAT_CONST resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for STRING_CONST resolved using rule 4 (global_declaration -> postfix_expression .)
  ! reduce/reduce conflict for $end resolved using rule 4 (global_declaration -> postfix_expression .)
    VOID            reduce using rule 4 (global_declaration -> postfix_expression .)
    CHAR            reduce using rule 4 (global_declaration -> postfix_expression .)
    INT             reduce using rule 4 (global_declaration -> postfix_expression .)
    FLOAT           reduce using rule 4 (global_declaration -> postfix_expression .)
    ASSIGN          reduce using rule 4 (global_declaration -> postfix_expression .)
    ASSIGN_TIMES    reduce using rule 4 (global_declaration -> postfix_expression .)
    ASSIGN_DIVIDE   reduce using rule 4 (global_declaration -> postfix_expression .)
    ASSIGN_REMAINDER reduce using rule 4 (global_declaration -> postfix_expression .)
    ASSIGN_PLUS     reduce using rule 4 (global_declaration -> postfix_expression .)
    ASSIGN_MINUS    reduce using rule 4 (global_declaration -> postfix_expression .)
    LPAREN          reduce using rule 4 (global_declaration -> postfix_expression .)
    UPPERSAND       reduce using rule 4 (global_declaration -> postfix_expression .)
    TIMES           reduce using rule 4 (global_declaration -> postfix_expression .)
    PLUS            reduce using rule 4 (global_declaration -> postfix_expression .)
    MINUS           reduce using rule 4 (global_declaration -> postfix_expression .)
    NOT             reduce using rule 4 (global_declaration -> postfix_expression .)
    ID              reduce using rule 4 (global_declaration -> postfix_expression .)
    INT_CONST       reduce using rule 4 (global_declaration -> postfix_expression .)
    FLOAT_CONST     reduce using rule 4 (global_declaration -> postfix_expression .)
    STRING_CONST    reduce using rule 4 (global_declaration -> postfix_expression .)
    $end            reduce using rule 4 (global_declaration -> postfix_expression .)
    PLUS_PLUS       shift and go to state 38
    MINUS_MINUS     shift and go to state 39
    DIVIDE          reduce using rule 16 (cast_expression -> postfix_expression .)
    MOD             reduce using rule 16 (cast_expression -> postfix_expression .)
    SMALLER         reduce using rule 16 (cast_expression -> postfix_expression .)
    SMALLER_EQUAL   reduce using rule 16 (cast_expression -> postfix_expression .)
    BIGGER          reduce using rule 16 (cast_expression -> postfix_expression .)
    BIGGER_EQUAL    reduce using rule 16 (cast_expression -> postfix_expression .)
    EQUAL           reduce using rule 16 (cast_expression -> postfix_expression .)
    DIFFERENT       reduce using rule 16 (cast_expression -> postfix_expression .)
    AND             reduce using rule 16 (cast_expression -> postfix_expression .)
    OR              reduce using rule 16 (cast_expression -> postfix_expression .)

  ! PLUS_PLUS       [ reduce using rule 4 (global_declaration -> postfix_expression .) ]
  ! MINUS_MINUS     [ reduce using rule 4 (global_declaration -> postfix_expression .) ]
  ! VOID            [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! CHAR            [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! INT             [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! FLOAT           [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! ASSIGN          [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! ASSIGN_TIMES    [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! ASSIGN_DIVIDE   [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! ASSIGN_REMAINDER [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! ASSIGN_PLUS     [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! ASSIGN_MINUS    [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! LPAREN          [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! PLUS_PLUS       [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! MINUS_MINUS     [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! UPPERSAND       [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! TIMES           [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! PLUS            [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! MINUS           [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! NOT             [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! ID              [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! INT_CONST       [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! FLOAT_CONST     [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! STRING_CONST    [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! $end            [ reduce using rule 16 (cast_expression -> postfix_expression .) ]
  ! VOID            [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! CHAR            [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! INT             [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! FLOAT           [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! ASSIGN          [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! ASSIGN_TIMES    [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! ASSIGN_DIVIDE   [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! ASSIGN_REMAINDER [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! ASSIGN_PLUS     [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! ASSIGN_MINUS    [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! LPAREN          [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! PLUS_PLUS       [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! MINUS_MINUS     [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! UPPERSAND       [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! TIMES           [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! PLUS            [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! MINUS           [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! NOT             [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! ID              [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! INT_CONST       [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! FLOAT_CONST     [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! STRING_CONST    [ reduce using rule 18 (unary_expression -> postfix_expression .) ]
  ! $end            [ reduce using rule 18 (unary_expression -> postfix_expression .) ]


state 5

    (5) global_declaration -> type_specifier .

    VOID            reduce using rule 5 (global_declaration -> type_specifier .)
    CHAR            reduce using rule 5 (global_declaration -> type_specifier .)
    INT             reduce using rule 5 (global_declaration -> type_specifier .)
    FLOAT           reduce using rule 5 (global_declaration -> type_specifier .)
    ASSIGN          reduce using rule 5 (global_declaration -> type_specifier .)
    ASSIGN_TIMES    reduce using rule 5 (global_declaration -> type_specifier .)
    ASSIGN_DIVIDE   reduce using rule 5 (global_declaration -> type_specifier .)
    ASSIGN_REMAINDER reduce using rule 5 (global_declaration -> type_specifier .)
    ASSIGN_PLUS     reduce using rule 5 (global_declaration -> type_specifier .)
    ASSIGN_MINUS    reduce using rule 5 (global_declaration -> type_specifier .)
    LPAREN          reduce using rule 5 (global_declaration -> type_specifier .)
    PLUS_PLUS       reduce using rule 5 (global_declaration -> type_specifier .)
    MINUS_MINUS     reduce using rule 5 (global_declaration -> type_specifier .)
    UPPERSAND       reduce using rule 5 (global_declaration -> type_specifier .)
    TIMES           reduce using rule 5 (global_declaration -> type_specifier .)
    PLUS            reduce using rule 5 (global_declaration -> type_specifier .)
    MINUS           reduce using rule 5 (global_declaration -> type_specifier .)
    NOT             reduce using rule 5 (global_declaration -> type_specifier .)
    ID              reduce using rule 5 (global_declaration -> type_specifier .)
    INT_CONST       reduce using rule 5 (global_declaration -> type_specifier .)
    FLOAT_CONST     reduce using rule 5 (global_declaration -> type_specifier .)
    STRING_CONST    reduce using rule 5 (global_declaration -> type_specifier .)
    $end            reduce using rule 5 (global_declaration -> type_specifier .)


state 6

    (6) global_declaration -> assignment_operator .

    VOID            reduce using rule 6 (global_declaration -> assignment_operator .)
    CHAR            reduce using rule 6 (global_declaration -> assignment_operator .)
    INT             reduce using rule 6 (global_declaration -> assignment_operator .)
    FLOAT           reduce using rule 6 (global_declaration -> assignment_operator .)
    ASSIGN          reduce using rule 6 (global_declaration -> assignment_operator .)
    ASSIGN_TIMES    reduce using rule 6 (global_declaration -> assignment_operator .)
    ASSIGN_DIVIDE   reduce using rule 6 (global_declaration -> assignment_operator .)
    ASSIGN_REMAINDER reduce using rule 6 (global_declaration -> assignment_operator .)
    ASSIGN_PLUS     reduce using rule 6 (global_declaration -> assignment_operator .)
    ASSIGN_MINUS    reduce using rule 6 (global_declaration -> assignment_operator .)
    LPAREN          reduce using rule 6 (global_declaration -> assignment_operator .)
    PLUS_PLUS       reduce using rule 6 (global_declaration -> assignment_operator .)
    MINUS_MINUS     reduce using rule 6 (global_declaration -> assignment_operator .)
    UPPERSAND       reduce using rule 6 (global_declaration -> assignment_operator .)
    TIMES           reduce using rule 6 (global_declaration -> assignment_operator .)
    PLUS            reduce using rule 6 (global_declaration -> assignment_operator .)
    MINUS           reduce using rule 6 (global_declaration -> assignment_operator .)
    NOT             reduce using rule 6 (global_declaration -> assignment_operator .)
    ID              reduce using rule 6 (global_declaration -> assignment_operator .)
    INT_CONST       reduce using rule 6 (global_declaration -> assignment_operator .)
    FLOAT_CONST     reduce using rule 6 (global_declaration -> assignment_operator .)
    STRING_CONST    reduce using rule 6 (global_declaration -> assignment_operator .)
    $end            reduce using rule 6 (global_declaration -> assignment_operator .)


state 7

    (7) global_declaration -> cast_expression .
    (22) binary_expression -> cast_expression .
